tests/checker/fail/duplicate_function.can
Doubled = (Int) => Int {
    Int.mul(2)
}

Doubled = (Int) => Int {
    Int.mul(3)
}

Unit => Program {
    2 -> Doubled -> Print
}
